--- a/Demos/react-hook-demo/src/index.css
+++ b/Demos/react-hook-demo/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.App {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
